--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <div class="container">
         <header>
             <h1>רישום לידות 2026</h1>
-            <button id="addBtn" class="btn btn-primary">
-                <span>➕</span> הוסף רשומה חדשה
-            </button>
+            <div class="header-actions">
+                <button id="installBtn" class="btn btn-secondary" style="display: none;">
+                    <span>📥</span> הורד אפליקציה
+                </button>
+                <button id="addBtn" class="btn btn-primary">
+                    <span>➕</span> הוסף רשומה חדשה
+                </button>
+            </div>
         </header>
 
         <div class="filter-section">
