--- a/index.html
+++ b/index.html
@@ -129,8 +129,18 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="names">שמות *</label>
-                    <input type="text" id="names" placeholder="שם הלקוח/ה" required>
+                    <label for="motherName">שם האם *</label>
+                    <input type="text" id="motherName" placeholder="שם האם" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="fatherName">שם האב</label>
+                    <input type="text" id="fatherName" placeholder="שם האב">
+                </div>
+
+                <div class="form-group">
+                    <label for="familyName">שם משפחה *</label>
+                    <input type="text" id="familyName" placeholder="שם משפחה" required>
                 </div>
 
                 <div class="form-group">
