--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
     <link rel="shortcut icon" href="icon-192.png">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://apis.google.com/js/api.js" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link rel="icon" type="image/png" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👶</text></svg>">
 </head>
 <body>
@@ -23,11 +25,23 @@
         <header>
             <h1>רישום לידות 2026</h1>
             <div class="header-actions">
+                <div id="authSection" style="display: none;">
+                    <button id="signInBtn" class="btn btn-secondary">
+                        <span>🔐</span> התחבר ל-Google
+                    </button>
+                    <button id="signOutBtn" class="btn btn-secondary" style="display: none;">
+                        <span>🚪</span> התנתק
+                    </button>
+                    <span id="userInfo" style="margin: 0 12px; color: var(--text-secondary);"></span>
+                </div>
                 <button id="installBtn" class="btn btn-secondary" style="display: none;">
                     <span>📥</span> הורד אפליקציה
                 </button>
-                <button id="addBtn" class="btn btn-primary">
+                <button id="addBtn" class="btn btn-primary" style="display: none;">
                     <span>➕</span> הוסף רשומה חדשה
+                </button>
+                <button id="syncBtn" class="btn btn-secondary" style="display: none;">
+                    <span>🔄</span> סנכרן
                 </button>
             </div>
         </header>
@@ -55,8 +69,22 @@
 
         <div id="emptyState" class="empty-state">
             <div class="empty-icon">📋</div>
-            <h2>אין רשומות עדיין</h2>
-            <p>לחץ על "הוסף רשומה חדשה" כדי להתחיל</p>
+            <h2 id="emptyStateTitle">אין רשומות עדיין</h2>
+            <p id="emptyStateMessage">לחץ על "הוסף רשומה חדשה" כדי להתחיל</p>
+        </div>
+
+        <div id="loadingState" class="loading-state" style="display: none;">
+            <div class="loading-spinner"></div>
+            <p>טוען נתונים מ-Google Calendar...</p>
+        </div>
+
+        <div id="authRequiredState" class="empty-state">
+            <div class="empty-icon">🔐</div>
+            <h2>נדרשת התחברות</h2>
+            <p>אנא התחבר ל-Google Calendar כדי להתחיל</p>
+            <button id="authRequiredBtn" class="btn btn-primary" style="margin-top: 16px;">
+                <span>🔐</span> התחבר ל-Google
+            </button>
         </div>
     </div>
 
@@ -202,6 +230,7 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
