google calendar only as backup

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             </div>
             <form id="entryForm">
                 <div class="form-group">
-                    <label for="month">חודש *</label>
-                    <select id="month" required>
+                    <label for="month">חודש</label>
+                    <select id="month">
                         <option value="">בחר חודש</option>
                         <option value="ינואר">ינואר</option>
                         <option value="פברואר">פברואר</option>
@@ -152,13 +152,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="estimatedDate">תאריך משוער *</label>
-                    <input type="date" id="estimatedDate" required>
+                    <label for="estimatedDate">תאריך משוער</label>
+                    <input type="date" id="estimatedDate">
                 </div>
 
                 <div class="form-group">
-                    <label for="motherName">שם האם *</label>
-                    <input type="text" id="motherName" placeholder="שם האם" required>
+                    <label for="motherName">שם האם</label>
+                    <input type="text" id="motherName" placeholder="שם האם">
                 </div>
 
                 <div class="form-group">
@@ -167,18 +167,18 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="familyName">שם משפחה *</label>
-                    <input type="text" id="familyName" placeholder="שם משפחה" required>
+                    <label for="familyName">שם משפחה</label>
+                    <input type="text" id="familyName" placeholder="שם משפחה">
                 </div>
 
                 <div class="form-group">
-                    <label for="birthNumber">מספר לידה *</label>
-                    <input type="number" id="birthNumber" min="1" required>
+                    <label for="birthNumber">מספר לידה</label>
+                    <input type="number" id="birthNumber" min="1">
                 </div>
 
                 <div class="form-group">
-                    <label for="agreedAmount">סכום שסוכם *</label>
-                    <input type="number" id="agreedAmount" min="0" step="100" required>
+                    <label for="agreedAmount">סכום שסוכם</label>
+                    <input type="number" id="agreedAmount" min="0" step="100">
                 </div>
 
                 <div class="form-group">
