--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <button id="syncBtn" class="btn btn-secondary" style="display: none;">
                     <span>🔄</span> סנכרן
                 </button>
+                <button id="upgradeBtn" class="btn-upgrade" style="display: none;" title="עדכון זמין">
+                    <span>⬆️</span>
+                </button>
             </div>
         </header>
 
